# inspire_finder

./: .env.sample  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
api_recommendations/: apps.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
api_users/: permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
config/: settings.py  urls.py
fixtures/: auth.json  recommendations.json  users.json
recommendations/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
recommendations/migrations/: 0001_initial.py  0002_initial.py  0003_category_item_count_likes_item_created_at_and_more.py  0003_item_count_likes_item_created_at_item_picture_and_more.py  0003_item_picture_item_user_alter_item_description.py
recommendations/templates/recommendations/: base.html  category_list.html  contacts.html  item_confirm_delete.html  item_detail.html  item_form.html  item_list.html  item_recommended.html  like_error.html  statistic.html  user_item_list.html  user_like_list.html
recommendations/templates/recommendations/includes/: inc_recommendations_menu.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_country_user_city_alter_user_phone.py  0002_remove_user_country_user_city_user_code_and_more.py
users/templates/users/: phone_confirm.html  user_confirm_delete.html  user_detail.html  user_form.html  user_login.html
users/templatetags/: my_tags.py
