[tool.poetry]
name = "inspire-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
networkx = "^3.3"
pillow = "^10.4.0"
redis = "^5.1.0"
ipython = "^8.27.0"
django = "4.2"
python-dotenv = "^1.0.1"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
